--- a/SRC/app/src/main/res/layout/activity_main.xml
+++ b/SRC/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
     <ImageView
         android:id="@+id/animationview"
@@ -32,7 +35,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.148" />
 
     <EditText
         android:id="@+id/voiceInput"
