--- a/SRC/app/src/main/res/layout/activity_main.xml
+++ b/SRC/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.745" />
 
-    <com.google.android.youtube.player.YouTubePlayerView
+    <fragment
+        android:name="com.google.android.youtube.player.YouTubePlayerFragment"
         android:id="@+id/youtube_player_View"
         android:layout_width="match_parent"
         android:layout_height="270dp"
